--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -64,6 +64,7 @@ input, select, textarea {
   color:white;
   height:auto;
   display: flex;
+  padding-top: 30px;
   flex-direction: column;
   align-items: center;
 
@@ -163,6 +164,7 @@ word-wrap: break-word;
   width:150px;
   height:40px;
   border-radius: 20px;
+  margin-bottom: 20px;
   
 }
 .btnlink{
@@ -219,23 +221,6 @@ flex-direction: column;
     
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
