--- a/client/src/styles/CartStyles.css
+++ b/client/src/styles/CartStyles.css
@@ -1,56 +1,74 @@
-
-.card{
-  max-width:300px;
-  text-align:left;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  font-size:20px;
-}
-.cart-page2{
-  margin-top:164px;
-  margin-bottom: 30px;
-  color:black;
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.card-img{
+  height:200px;
 }
 .cart-page {
-  margin-top:164px;
-  margin-bottom: 30px;
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin-top: 150px;
+  margin-bottom:0px;
+  max-width: 1200px;
+  height:fit-content;
+  display: flex; 
+  justify-content: space-between; 
+  align-items: flex-start; 
+
 }
 
-.cart-page h1 {
-  padding: 15px !important;
-  font-family: "roboto", sans-serif;
-  font-weight: normal;
-  background-color: rgba(0, 0, 255, 0.072) !important;
+.cart-summary {
+  text-align: left;
+  padding: 15px;
+  font-size:20px;
+  flex: 1; 
+  max-width: 400px; 
+  margin-bottom:10px;
+  margin-right:40px; 
 }
-.cart-page h1 > p {
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: center; 
+  flex: 2; 
+  padding: 0 10px; 
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: calc(50% - 20px); 
   font-size: 20px;
-  margin-top: 10px;
+  margin: 10px;
+  color: black;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 5px;
+}
+@media (max-width: 768px) {
+  .card {
+    width: 100%; 
+  }
 }
 
-.cart-page .card {
-  background-color: black;
-  padding: 5px !important;
-  color:white;
-  height:400px !important;
-  margin-bottom: 5px !important;
-}
-.cart-page .cart-remove-btn {
-  
-  display:flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.cart-page .cart-summary {
-  text-align: center;
-  
+
+
+@media (max-width: 768px) {
+  .cart-page {
+    margin-top: 50px; 
+    flex-direction: column;
+    align-items: center; 
+    padding: 0; 
+  }
+
+  .cart-summary {
+    width: 90%; 
+    max-width: none;
+    margin: 0; 
+  }
+
+  .product-list {
+    width: 90%;
+  }
+
+  .card {
+    width: 100%; 
+    margin: 10px 0; 
+  }
 }
