--- a/client/src/styles/CategoryProductStyles.css
+++ b/client/src/styles/CategoryProductStyles.css
@@ -8,8 +8,7 @@ color:white;
   margin-top: 80px !important;
 }
 .category .card {
-  color:white;
-  background-color: black;
+  color:black;
   width:250px;
 }
 .category .card-name-price {
@@ -32,7 +31,7 @@ color:white;
 }
 
 .category .card-text {
-  color:white;
+  color:rgb(6, 6, 6);
   
 }
 
@@ -41,5 +40,5 @@ color:white;
 }
 
 .category .card-img-top {
-  height: 200px !important;
+  height: 200px;
 }
