--- a/client/src/styles/ProductDetailsStyles.css
+++ b/client/src/styles/ProductDetailsStyles.css
@@ -6,12 +6,12 @@
 .product-details-info {
   display: flex;
   flex-direction: column;
-  /*align-items: center;*/
+
   justify-content: center;
 }
 
 .product-details-info h6 {
-  margin-bottom: 20px !important;
+  margin-bottom: 20px;
 }
 
 .similar-products .card {
@@ -39,7 +39,7 @@
 }
 
 .similar-products .card-text {
-  color: rgb(255, 255, 255);
+  color: rgb(1, 1, 1);
 }
 
 .similar-products .card img:hover {
